<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainActivityViewModelData"
            type="com.izmary.livedataviewmodel.matchscorecounter.viewmodel.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <!--Team 1 Component-->
        <TextView
            android:id="@+id/textView_team1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/anton"
            android:maxEms="7"
            android:maxLines="1"
            android:text="@{mainActivityViewModelData.dataTeamName1}"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/dataTeam1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@{String.valueOf(mainActivityViewModelData.totalTeamScore1)}"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0" />

        <Button
            android:id="@+id/button_minusTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->mainActivityViewModelData.scoreIncrementTeam1()}"
            android:text="@string/btnAdd"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button_addTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->mainActivityViewModelData.scoreDecrementTeam1()}"
            android:text="@string/btnMinus"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintHorizontal_bias="0.61"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!--Team 2 Component-->
        <TextView
            android:id="@+id/textView_team2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/anton"
            android:maxEms="7"
            android:maxLines="1"
            android:text="@{mainActivityViewModelData.dataTeamName2}"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
            tools:text="@string/dataTeam2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@{String.valueOf(mainActivityViewModelData.totalTeamScore2)}"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
            tools:text="0" />

        <Button
            android:id="@+id/button_addTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->mainActivityViewModelData.scoreDecrementTeam2()}"
            android:text="@string/btnMinus"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            app:layout_constraintHorizontal_bias="0.61"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintVertical_bias="0.86" />

        <Button
            android:id="@+id/button_minusTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->mainActivityViewModelData.scoreIncrementTeam2()}"
            android:text="@string/btnAdd"
            app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"
            app:layout_constraintVertical_bias="0.86" />

        <!--Reset component-->
        <Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()->mainActivityViewModelData.scoreReset()}"
            android:text="@string/btnReset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_horizontal2"
            app:layout_constraintWidth_percent="0.5" />

        <!--Guideline for managing layout-->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_horizontal2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>